--- a/src/Styles/SettingWindowStyle.xaml
+++ b/src/Styles/SettingWindowStyle.xaml
@@ -6,7 +6,7 @@
     </Style>
 
     <Style x:Key="TopGrid" TargetType="Grid">
-        <Setter Property="Margin" Value="0,0,0,5"></Setter>
+        <Setter Property="Margin" Value="0,0,0,0"></Setter>
     </Style>
     <Style x:Key="WindowTitle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="16"></Setter>
@@ -17,5 +17,20 @@
         <Setter Property="Background" Value="red"></Setter>
         <Setter Property="Width" Value="20"></Setter>
         <Setter Property="Height" Value="20"></Setter>
+    </Style>
+
+    <Style x:Key="SettingType" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="#FFC069"></Setter>
+        <Setter Property="FontSize" Value="15"></Setter>
+        <Setter Property="Margin" Value="0,8,0,2"></Setter>
+    </Style>
+
+    <Style x:Key="SettingContent" TargetType="StackPanel">
+        <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+    </Style>
+
+    <Style x:Key="SettingRadio" TargetType="RadioButton">
+        <Setter Property="Width" Value="50"></Setter>
+        <Setter Property="Margin" Value="0,0,0,2"></Setter>
     </Style>
 </ResourceDictionary>
