--- a/src/SettingWindow.xaml
+++ b/src/SettingWindow.xaml
@@ -36,7 +36,7 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Style="{StaticResource WindowTitle}" Text="设置"></TextBlock>
+            <TextBlock Grid.Column="0" Style="{StaticResource WindowTitle}" Text="设置 (重启后生效)"></TextBlock>
             <Button Grid.Column="2" Style="{StaticResource CloseButton}">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="Click">
