--- a/src/ReportWindow.xaml
+++ b/src/ReportWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
-        Title="ReportWindow" Height="450" Width="800"
+        Title="ReportWindow" Height="600" Width="1000"
         WindowStyle="None"
         BorderThickness="24"
         AllowsTransparency="True"
@@ -69,13 +69,24 @@
                     </lvc:PieChart>
                 </TabItem>
 
-                <TabItem Header="最近一周" Style="{StaticResource TabItem}">
-                    <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="Top">
+                <TabItem Header="最近7天" Style="{StaticResource TabItem}">
+                    <lvc:CartesianChart Series="{Binding LastWeekCollection}" LegendLocation="Top">
                         <lvc:CartesianChart.AxisX>
-                            <lvc:Axis Title="日期"></lvc:Axis>
+                            <lvc:Axis Labels="{Binding LastWeekTitle}"></lvc:Axis>
                         </lvc:CartesianChart.AxisX>
                         <lvc:CartesianChart.AxisY>
-                            <lvc:Axis Title="时间(分钟)"></lvc:Axis>
+                            <lvc:Axis Title="时长(分钟)"></lvc:Axis>
+                        </lvc:CartesianChart.AxisY>
+                    </lvc:CartesianChart>
+                </TabItem>
+
+                <TabItem Header="最近30天" Style="{StaticResource TabItem}">
+                    <lvc:CartesianChart Series="{Binding LastMonthCollection}" LegendLocation="Top">
+                        <lvc:CartesianChart.AxisX>
+                            <lvc:Axis Labels="{Binding LastMonthTitle}"></lvc:Axis>
+                        </lvc:CartesianChart.AxisX>
+                        <lvc:CartesianChart.AxisY>
+                            <lvc:Axis Title="时长(分钟)"></lvc:Axis>
                         </lvc:CartesianChart.AxisY>
                     </lvc:CartesianChart>
                 </TabItem>
